--- a/students/templates/student.html
+++ b/students/templates/student.html
@@ -1,5 +1,5 @@
 <form action="/student/" method="post">
     {% csrf_token %}
-    {{ form }}
+    Новый студент: {{ form }}
     <input type="submit" value="Submit">
 </form>
