--- a/students/templates/student.html
+++ b/students/templates/student.html
@@ -1,4 +1,4 @@
-<form action="/student/" method="post">
+<form action="{% url 'student' %}" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
