--- a/students/templates/students.html
+++ b/students/templates/students.html
@@ -1,10 +1,10 @@
 {% for s in students %}
-{{ s.first_name }}
-{{ s.last_name }}
-{{ s.age }}
-{{ s.city }}
-{{ s.id }} <br>
-<img src=" {{ s.diploma.url }}" alt="{{ s.id }}">
+    {{ s.first_name }}
+    {{ s.last_name }}
+    {{ s.age }}
+    {{ s.city }}
+    {{ s.id }} <br>
+    <img src="{{ s.diploma.url }}" alt="picture">
 {% endfor %}
 
 <a href="{% url 'student' %}">New student: </a>
